changed research text to markdown, fixed minor issues on research page

--- a/app/views/pages/research.html.haml
+++ b/app/views/pages/research.html.haml
@@ -13,7 +13,7 @@
           .text-center
             = image_tag("/assets/pages/research/103.png")
             %h2
-              %a{href: "#high_impact_careers"} Effective Causes
+              %a{href: "#effective_causes"} Effective Causes
           %p 
             How can you compare causes, and which are the most high priority?
         .col-sm-3.item
@@ -34,168 +34,105 @@
             To apply to receive in-depth, personalised coaching, go
             %a{href: "coaching/overview"} here.
 
-            
-
-
   .container
-    %h1 Summary
-    %p We want you to change the world.
-    %p How do we help you do that? You want a meaningful career that makes a real difference. But you face a tough career decision: What job should I take? Should I do further study? Should I leave my job for one that does more to help the world?
-    %p
-      We think the conventional advice
-      = succeed "." do
-        %a{href: "http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world"} isn’t good enough
-    %p
-      We’re the first organisation that helps you answer: how can I use the 80,000 hours of my career to make the most difference?, that is, how can I help the most people, in the biggest ways, now and into the future? We identify the most pressing problems in the world, and work out how you can do the most to solve them using your career. Our recommendations are based on in-depth research and transparent, rigorous analysis, conducted with help from the leading experts and academics at Oxford.
-    %p
-      This page contains the most useful results we have learned from analysing the decisions of hundreds of people in our
-      %a{href: "/coaching/overview"} coaching process
-      and our independent research.
-    %hr/
-    %h1#high_impact_careers High Impact Careers 
-    %p
-      In which careers can you make the most impact?
-      We’ve made a
-      %a{href: "http://80000hours.org/blog/238-how-to-assess-the-impact-of-a-career"} basic framework to help you compare your options.
-    %p
-      %img{alt: "Career Value Equation", src: "/assets/pages/research/career_value.png"}/
-    %p We think valuable careers do two key things. First, they have a positive impact. Second, they give you better, flexible options to have an impact in the future, which we call your ‘career capital.’
-    %p
-      %strong> High impact careers move lots of resources into effective solutions to pressing problems
-      \. So, look for options that give you lots of leverage (whether that consists of campaigning, research, money, or something else) and let you help effective causes (see below for more on that).
-    %p
-      When assessing career capital, look for what you gain in terms of (i) skills (ii) connections, and (iii) useful credentials.
-    %hr/
-    %h1#effective_causes Effective Causes
+    :maruku
 
-    %p Which causes are most high priority?
-    %p
-      %img{alt: "Cause Effectiveness", src: "/assets/pages/research/cause-effectiveness.png"}/
-    %p You can use our framework for assessing causes to work out, given your values, in which causes are most effective.
-    %p
-      Some problems are important but not solvable. Others are solvable but
-      = succeed "." do
-        %a{href: "http://qz.com/84943/what-we-can-learn-from-one-of-the-worst-charities-in-the-world/"} not important
-      The most effective causes involve 
-      %strong problems that are both solvable and important.
-     
-    %p
-      Broadly, you could think of the most important causes as the ones that can benefit the
-      %strong most people
-      in the
-      %strong biggest ways
-      in the
-      = succeed "." do
-        %strong long-term
-      Though, some causes are important due to their indirect impact - they let you learn about what’s effective and help us make progress in other areas.
-    %p When looking for solvable causes, look for:
-    %ul
-      %li Clear ways to make progress supported by strong evidence or theory
-      %li A pressing need for more people working on the cause, and a theory about why the cause doesn’t get enough support
-      %li A track record of success in similar causes
-    %hr/
-    %h1#personal_fit Personal Fit
-    %p
-      Which option is the best fit for you?  
-    %p 
-      We don’t think ‘do what you’re passionate about’ or ‘do what you’re good at’ is
-      %a{href: "http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world"} very useful advice. 
-      Passion and ability develop out of dedicating yourself to a skill, so it’s better plan the other way round, and ask yourself “what do I
-      %em want
-      to become good at?” You’ve probably got more good options open to you than you think.
-    %p
-      How can you decide what you want to become good at? Ask “what can I do that’s most valuable for the world?” Putting
-      %a{href: "http://80000hours.org/blog/187-the-best-career-advice-you-ll-never-hear-in-a-graduation-speech"} the value you create for others first
-      can lead to a deeply fulfilling career.
-    %p
-      When it comes to comparing jobs, we think people
-      %a{href: "http://80000hours.org/blog/243-does-your-personality-matter-in-picking-a-career"} worry too much
-      about whether their personality is a “good fit” for certain jobs. To find a meaningful job, what
-      %a{href: "http://80000hours.org/blog/134-our-research-on-how-to-find-a-job-you-love"} really matters
-      is interesting work, with purpose and good support from your colleagues.
-    %p
-      Beyond that, much depends on the details of the situation, which is why we offer
-      = succeed "." do
-        %a{href: "/coaching/overview"} one-on-one coaching
-      Further, there’s still plenty that’s not known about how to fit people with jobs, so make sure you try lots of things out!
-    %hr/
-    %h1#your_plan Your Plan
-    %p
-      Having a plan is useful for motivation and direction, but overly
-      %a{href: "http://80000hours.org/blog/164-should-you-plan-your-career"} rigid plans
-      quickly go out of date and make you inflexible. We’ve developed a style of career plan that we think strikes a good balance. You can
-      %a{href: "http://80000hours.org/blog/241-introduction-to-our-career-model"} start applying our career model
-      to your own career.
-    %p
-      First, define
-      = succeed ":" do
-        %strong your vision
-    %p
-      Don’t get caught up in thinking your decision to be perfect. Rather, treat everything as a
-      = succeed "," do
-        %a{href: "http://80000hours.org/blog/237-your-career-is-like-a-startup"} best guess
-    %p
-      There are
-      %a{href: "http://80000hours.org/blog/165-biases-how-they-affect-your-career-decisions-and-what-to-do-about-them"} important biases
-      to avoid too. You’ll probably consider too few options and be biased to stay on your current path. Going with your gut can be useful sometimes, but often it’s better to be more systematic.
-    %hr/
-    %h1#samples_of_our_research Samples of our research
-    %ol
-      %li
-        %p
-          It could be better for many young people to support the non-profit sector indirectly by taking a high earning job and doing philanthropy, rather than working in it themselves. We’ve
-          %a{href: "http://link.springer.com/content/pdf/10.1007%2Fs10677-013-9433-4.pdf"} published a paper
-          on this topic. Here you can see a simplified version
-          = succeed "." do
-            %a{href: "/earning-to-give"} of the arguments in favor of earning to give
-      %li
-        %p
-          Most doctors don’t save many lives:
-          %a{href: "http://80000hours.org/blog/72-how-many-lives-does-a-doctor-save"} our analysis of how replaceable doctors are
-      %li
-        %p
-          Fundraising for GiveWell’s top recommendation is an apparently easy way to create a highly effective charity.
-          %a{href: "http://80000hours.org/blog/162-how-to-create-the-world-s-most-effective-charity"} Learn about the case for ‘meta-charity’
-      %li
-        %p
-          Some students have more than a 1 in 10 chance of becoming an MP in the British Parliament.
-          %a{href: "http://80000hours.org/blog/22-how-hard-is-it-to-become-prime-minister-of-the-united-kingdom"} How hard is it to become the Prime Minister
-      %li
-        %p
-          %a{href: "http://80000hours.org/blog/233-how-important-is-keeping-your-options-open"} Keeping your options open
-          is really important, especially if you care about making a difference.
-    %hr/
-    %h1#whats_wrong_with_existing_careers_advice_for_people_who_want_to_make_an_impact What’s wrong with existing careers advice for people who want to make an impact?
-    %ol
-      %li
-        %p
-          %a{href: "http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world"} 5 common pieces of advice that don’t work.
-          Perhaps it’s better to
-          = succeed "." do
-            %a{href: "http://80000hours.org/blog/187-the-best-career-advice-you-ll-never-hear-in-a-graduation-speech"} “do what’s valuable”
-      %li
-        %p
-          Many common ways to make a difference don’t clearly work, like
-          %a{href: "http://80000hours.org/blog/123-is-microcredit-mostly-hype"} microfinance
-          or
-          = succeed "," do
-            %a{href: "http://80000hours.org/blog/100-let-s-stop-building-schools"} building schools
-          = succeed "." do
-            %a{href: "http://80000hours.org/blog/66-social-interventions-gone-wrong"} difficult to work out which do
-      %li
-        %p
-          The impact of different paths can
-          = succeed "," do
-            %a{href: "http://80000hours.org/blog/94-how-to-do-one-year-of-work-in-four-hours"} vary massively
-          but people rarely try to assess the impact of different options.
-      %li
-        %p
-          We often don’t consider
-          %a{href: "http://80000hours.org/blog/112-what-s-your-true-impact"} what would have happened
-          if we hadn’t acted. Some people who think they are doing good are probably doing harm instead.
-    %hr/
-    %p If you’d like more help from our research, apply to receive one of our limited number of free, in-depth, personalised consultations.
-    %p
-      .btn
-        = link_to 'Get Coaching', '/coaching/overview', :class => 'btn btn-large btn-primary'
-        
+      #Summary
+      We want you to change the world.
+
+      How do we help you do that? You want a meaningful career that makes a real difference. But you face a tough career decision: What job should I take? Should I do further study? Should I leave my job for one that does more to help the world?
+
+      We think the conventional advice [isn’t good enough](http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world).
+
+      We’re the first organisation that helps you answer: *how can I use the 80,000 hours of my career to make the most difference?*, that is, how can I help the most people, in the biggest ways, now and into the future? We identify the most pressing problems in the world, and work out how you can do the most to solve them using your career. Our recommendations are based on in-depth research and transparent, rigorous analysis, conducted with help from the leading experts and academics at Oxford.
+
+      This page contains the most useful results we have learned from analysing the decisions of hundreds of people in our [coaching process](/coaching/overview) and our independent research. 
+
+      * * *
+
+      #High Impact Careers
+
+      In which careers can you make the most impact? We’ve made a [basic framework to help you compare your options.](http://80000hours.org/blog/238-how-to-assess-the-impact-of-a-career)
+
+      ![Career Value Equation](/assets/pages/research/career_value.png)
+
+      We think valuable careers do two key things. First, they have a positive impact. Second, they give you better, flexible options to have an impact in the future, which we call your ‘career capital.’
+
+      **High impact careers move lots of resources into effective solutions to pressing problems**. So, look for options that give you lots of leverage (whether that consists of campaigning, research, money, or something else) and let you help effective causes (see below for more on that).
+
+      When assessing **career capital**, look for what you gain in terms of (i) skills (ii) connections, and (iii) useful credentials.
+
+      * * *
+
+      #Effective Causes
+      Which causes are most high priority?
+
+      ![Cause Effectiveness](/assets/pages/research/cause-effectiveness.png)
+
+
+      You can use our framework for assessing causes to work out, given your values, in which causes are most effective.
+
+      Some problems are important but not solvable. Others are solvable but [not important](http://qz.com/84943/what-we-can-learn-from-one-of-the-worst-charities-in-the-world/). The most effective causes involve **problems that are both solvable and important**.
+
+      Broadly, you could think of the most important causes as the ones that can benefit the **most people** in the **biggest ways** in the **long-term**. Though, some causes are important due to their indirect impact - they let you learn about what’s effective and help us make progress in other areas.
+
+      When looking for solvable causes, look for:
+      * Clear ways to make progress supported by strong evidence or theory
+      * A pressing need for more people working on the cause, and a theory about why the cause doesn’t get enough support.
+      * A track record of success in similar causes
+
+      * * *
+
+      #Personal Fit
+      
+      Which option is the best fit for you?
+
+      We don’t think ‘do what you’re passionate about’ or ‘do what you’re good at’ is [very useful advice](http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world) . Passion and ability develop out of dedicating yourself to a skill, so it’s better plan the other way round, and ask yourself “what do I *want* to become good at?” You’ve probably got more good options open to you than you think. 
+
+      How can you decide what you want to become good at? Ask “what can I do that’s most valuable for the world?” Putting [the value you create for others first](http://80000hours.org/blog/187-the-best-career-advice-you-ll-never-hear-in-a-graduation-speech) can lead to a deeply fulfilling career. 
+
+      When it comes to comparing jobs, we think people [worry too much](http://80000hours.org/blog/243-does-your-personality-matter-in-picking-a-career) about whether their personality is a “good fit” for certain jobs. To find a meaningful job, what [really matters](http://80000hours.org/blog/134-our-research-on-how-to-find-a-job-you-love) is interesting work, with purpose and good support from your colleagues.
+
+      Beyond that, much depends on the details of the situation, which is why we offer [one-on-one coaching](/coaching/overview). Further, there’s still plenty that’s not known about how to fit people with jobs, so make sure you try lots of things out!
+
+      * * *
+
+      #Your Plan
+
+      Having a plan is useful for motivation and direction, but overly [rigid plans](http://80000hours.org/blog/164-should-you-plan-your-career) quickly  go out of date and make you inflexible. We’ve developed a style of career plan that we think strikes a good balance. You can [start applying our career model](http://80000hours.org/blog/241-introduction-to-our-career-model) to your own career.
+
+      Don’t get caught up in thinking your decision to be perfect. Rather, treat everything as a [best guess](http://80000hours.org/blog/237-your-career-is-like-a-startup), that you’re going to refine and test as time goes on.
+
+      There are [important biases](http://80000hours.org/blog/165-biases-how-they-affect-your-career-decisions-and-what-to-do-about-them) to avoid too. You’ll probably consider too few options and be biased to stay on your current path. Going with your gut can be useful sometimes, but often it’s better to be more systematic.
+
+      * * *
+
+      #Samples of our Research
+
+      1. It could be better for many young people to support the non-profit sector indirectly by taking a high earning job and doing philanthropy, rather than working in it themselves. We’ve [published a paper](http://link.springer.com/content/pdf/10.1007%2Fs10677-013-9433-4.pdf) on this topic. Here you can see a simplified version [of the arguments in favor of earning to give](/earning-to-give).
+
+      2. Most doctors don’t save many lives: [our analysis of how replaceable doctors are](http://80000hours.org/blog/72-how-many-lives-does-a-doctor-save)
+
+      3. Fundraising for GiveWell’s top recommendation is an apparently easy way to create a highly effective charity. [Learn about the case for ‘meta-charity’](http://80000hours.org/blog/162-how-to-create-the-world-s-most-effective-charity)
+
+      4. Some students have more than a 1 in 10 chance of becoming an MP in the British Parliament. [How hard is it to become the Prime Minister](http://80000hours.org/blog/22-how-hard-is-it-to-become-prime-minister-of-the-united-kingdom)
+
+      5. [Keeping your options open](http://80000hours.org/blog/233-how-important-is-keeping-your-options-open) is really important, especially if you care about making a difference.
+
+      * * *
+
+      #What’s wrong with existing careers advice for people who want to make an impact?
+
+      1. [5 common pieces of advice that don’t work.](http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world) Perhaps it’s better to [“do what’s valuable”](http://80000hours.org/blog/187-the-best-career-advice-you-ll-never-hear-in-a-graduation-speech).
+
+      2. Many common ways to make a difference don’t clearly work, like [microfinance](http://80000hours.org/blog/123-is-microcredit-mostly-hype) or [building schools](http://80000hours.org/blog/100-let-s-stop-building-schools), and it’s [difficult to work out which do](http://80000hours.org/blog/66-social-interventions-gone-wrong).
+
+      3. The impact of different paths can [vary massively](http://80000hours.org/blog/94-how-to-do-one-year-of-work-in-four-hours), but people rarely try to assess the impact of different options.
+
+      4. We often don’t consider [what would have happened](http://80000hours.org/blog/112-what-s-your-true-impact) if we hadn’t acted. Some people who think they are doing good are probably doing harm instead.
+
+      * * *
+
+      If you’d like more help from our research, apply to receive one of our limited number of free, in-depth, personalised consultations.  
+
+      [Get Coaching](http://80000hours.org/coaching/overview){: .btn .btn-primary}
