fixed issue with rating comment not showing when nil on rating index page

--- a/app/views/blog_posts/_post_tags.html.haml
+++ b/app/views/blog_posts/_post_tags.html.haml
@@ -1,4 +1,4 @@
-- if post.tag_counts_on(:tags).size > 0
+- if @post.tag_counts_on(:tags).size > 0
   Keywords:
-  - tags = post.tag_counts_on(:tags).map{|tag| link_to( tag.name.titleize, { :action => :tag, :id => tag.name })}
+  - tags = @post.tag_counts_on(:tags).map{|tag| link_to( tag.name.titleize, { :action => :tag, :id => tag.name })}
   = raw(tags.join(", "))
