--- a/app/views/blog_posts/_display_heading.html.haml
+++ b/app/views/blog_posts/_display_heading.html.haml
@@ -11,9 +11,10 @@
 
     %h4
       %span.date
-        by
       = link_to_blog_post_author( post )
       %span.date
         on
         = format_date( post.created_at )
+  = render :partial => "post_stats", :locals => {:post => post}
   .clearfix
+
