made form 'Guidelines' link open in new tab.  This was causing an issue with Collin who was clicking it and having all of his article feedback get deleted

--- a/app/views/blog_posts/ratings/_form.html.erb
+++ b/app/views/blog_posts/ratings/_form.html.erb
@@ -4,7 +4,7 @@
       <h2> Article Feedback </h2>
     </div>
     <div class="col-md-5">
-      <p> Please rate the following 1-5.  </br>Refer to our <a href="https://docs.google.com/document/d/1fsENXnt8w0EhQ4PbfZPMxejCOTzsxUOJ2QBj0BYHt28/edit?usp=sharing">Guidelines</a> for explanation.  </p>
+      <p> Please rate the following 1-5.  </br>Refer to our <a href="https://docs.google.com/document/d/1fsENXnt8w0EhQ4PbfZPMxejCOTzsxUOJ2QBj0BYHt28/edit?usp=sharing" target="blank">Guidelines</a> for explanation.  </p>
     </div>
   </div>
   <div class="row">
