--- a/app/views/blog_posts/_display_heading.html.haml
+++ b/app/views/blog_posts/_display_heading.html.haml
@@ -14,7 +14,7 @@
       = link_to_blog_post_author( post )
       %span.date
         on
-        = format_date( post.created_at )
+        = format_date( post.published_at )
   = render :partial => "post_stats", :locals => {:post => post}
   .clearfix
 
