--- a/app/views/blog_posts/_display_teaser.html.haml
+++ b/app/views/blog_posts/_display_teaser.html.haml
@@ -4,7 +4,7 @@
       %a{:href => blog_post_path(post)}
         = post.title
     %h4
-      = raw("#{link_to_blog_post_author( post )} on  #{format_date( post.created_at )}") 
+      = raw("#{link_to_blog_post_author( post )} on  #{format_date( post.published_at )}") 
 
   .content
     = markdown post.get_teaser
