--- a/app/views/pages/research.html.haml
+++ b/app/views/pages/research.html.haml
@@ -22,7 +22,7 @@
             %h2
               %a{href: "#personal_fit"} Personal Fit
           %p 
-            How can you tie everything together and create a career plan?
+            What are the most important factors in picking a career that both makes a difference and is fully satisfying?
 
         .col-sm-3.item
           .text-center
@@ -31,8 +31,7 @@
               %a{href: "#your_plan"} Your Plan
           %p 
             How can you tie everything together and create a career plan?       
-            To apply to receive in-depth, personalised coaching, go
-            %a{href: "coaching/overview"} here.
+            
 
   .container
     :maruku
@@ -101,6 +100,8 @@
 
       Having a plan is useful for motivation and direction, but overly [rigid plans](http://80000hours.org/blog/164-should-you-plan-your-career) quickly  go out of date and make you inflexible. We’ve developed a style of career plan that we think strikes a good balance. You can [start applying our career model](http://80000hours.org/blog/241-introduction-to-our-career-model) to your own career.
 
+      First, define **your vision**: in the long-term, what **causes** do you want to work towards solving and how? Second, map out how you might be able to achieve your vision. Third, make a plan of the concrete next steps for the next 6-24 months that do the most to take you towards your vision.
+      
       Don’t get caught up in thinking your decision to be perfect. Rather, treat everything as a [best guess](http://80000hours.org/blog/237-your-career-is-like-a-startup), that you’re going to refine and test as time goes on.
 
       There are [important biases](http://80000hours.org/blog/165-biases-how-they-affect-your-career-decisions-and-what-to-do-about-them) to avoid too. You’ll probably consider too few options and be biased to stay on your current path. Going with your gut can be useful sometimes, but often it’s better to be more systematic.
